# fitra-cam-research

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  requirements-jetson-rtmpose.txt
.github/: copilot-instructions.md
cpp/: CMakeLists.txt
cpp/cmake/: FindTensorRT.cmake
cpp/src/: CMakeLists.txt  main.cpp
cpp/src/camera/: frame_source.cpp  frame_source.hpp  jpeg_decoder.cpp  jpeg_decoder.hpp  v4l2_capture.cpp  v4l2_capture.hpp
cpp/src/infer/: int8_calibrator.cpp  int8_calibrator.hpp  rtmpose.cpp  rtmpose.hpp  trt_builder.cpp  trt_builder.hpp  trt_engine.cpp  trt_engine.hpp  types.hpp  yolox.cpp  yolox.hpp
cpp/src/pipeline/: multi_pipeline.cpp  multi_pipeline.hpp  pose_pipeline.cpp  pose_pipeline.hpp  snapshot.cpp  snapshot.hpp
cpp/src/util/: cuda_check.hpp  logging.hpp
cpp/src/web/: crow_server.cpp  crow_server.hpp
cpp/tools/: CMakeLists.txt  build_engines.cpp  dump_keypoints.cpp  pose_bench.cpp
docs/: README.md  cpp-migration-plan.md  phase7-3d-ik-kalman.md
docs/research/: integration-benchmark.md  jetson-runtime.md  lifting-strategy.md  movenet-tensorrt.md  multi-camera-ingest.md  rtmpose-int8-eval-plan.md  rtmpose-int8-eval.md  rtmpose-pipeline.md  sync-calibration.md  webui-3d.md
python/: README.md  requirements-jetson.txt
python/scripts/: compare_keypoints.py  dual_rtmpose_cameras.py  dump_calibration_blobs.py  dump_reference_keypoints.py  pose_pipeline.py  setup_jetson_env.sh
scripts/: dual_rtmpose_cameras.py  dual_rtmpose_core.py  dual_rtmpose_web.py  record_dual_rtmpose_overlay.py  setup_jetson_env.sh
web/dual_rtmpose/: app.js  index.html  styles.css
